--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ section {
   background: #333;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 20px 25px;
+  align-items: center;
 }
 
 .nav-menu a {
@@ -67,10 +68,26 @@ section {
   transition: 0.2s;
   position: relative;
   border-radius: 40px;
+  position: relative;
 }
 
 .nav-menu a:hover {
   background: #666;
+}
+
+.nav-menu a::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: #fff;
+  /* display: block; */
+  position: absolute;
+  transition: 0.3s;
+  display: none;
+}
+
+.nav-menu a:hover::after {
+  width: 100%;
 }
 
 #profile {
@@ -134,7 +151,6 @@ section {
 .dev-links a:last-child {
   outline: 1px solid #333;
   background: #333;
-
   color: #fff;
   transition: all 0.3s ease;
 }
@@ -190,7 +206,7 @@ section {
     justify-content: space-between;
     padding: 20px;
     align-items: center;
-    max-width: 100%;
+    /* max-width: 100%; */
     width: 100%;
     position: fixed;
     top: 0;
@@ -222,21 +238,25 @@ section {
     overflow: hidden;
     flex-wrap: nowrap;
     text-align: center;
-    height: 300px;
+    height: 100vh;
     padding: 0;
     margin: 0;
     overflow: hidden;
     visibility: hidden;
     transition: all 0.2s ease;
     width: 0px;
-    justify-content: center;
+    justify-content: start;
     backdrop-filter: blur(10px);
+  }
+
+  .nav-menu a {
+    top: 100px;
   }
 
   .logo {
     display: flex;
     font-size: 12px;
-    width: 200px;
+    /* width: 200px; */
     margin: 0;
   }
 
@@ -312,4 +332,17 @@ section {
     align-items: center;
     justify-content: center;
   }
+}
+
+#about {
+  margin-top: 150px;
+}
+
+.about_info {
+  margin-top: 32px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
