--- a/style.css
+++ b/style.css
@@ -197,6 +197,10 @@ section {
   transition: 0.3s ease-in-out;
 }
 
+.menu-icons {
+  display: none;
+}
+
 @media (max-width: 600px) {
   body {
     margin-top: 70px;
@@ -250,7 +254,9 @@ section {
   }
 
   .nav-menu a {
-    top: 140px;
+    top: 120px;
+    display: flex;
+    /* gap: 50px; */
   }
 
   .menu-icons {
@@ -258,7 +264,7 @@ section {
     /* flex-direction: row-reverse; */
     gap: 20px;
     position: relative;
-    bottom: -140px;
+    bottom: -130px;
     justify-content: center;
   }
 
@@ -324,7 +330,7 @@ section {
   .intro_picture img {
     width: 200px;
     height: 200px;
-    margin: 20px 0px 0px 0px;
+    margin: 40px 0px 0px 0px;
     padding: 0;
   }
 
