--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@ section {
   border-top: 2px solid #fff;
   display: none;
   cursor: pointer;
+  position: absolute;
 }
 
 .toggleMenu::after,
@@ -315,7 +316,7 @@ section {
 @media (max-width: 600px) {
   body {
     margin-top: 70px;
-    padding-bottom: 3000px;
+    /* padding-bottom: 3000px; */
   }
 
   .container {
@@ -385,10 +386,10 @@ section {
 
   .mobile-menu {
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: center;
     width: 100%;
     align-items: center;
-    gap: 108px;
+    text-align: center;
   }
 
   .nav-menu {
@@ -417,7 +418,7 @@ section {
   }
 
   .nav-menu a {
-    top: 120px;
+    top: 60px;
     display: flex;
     /* gap: 50px; */
   }
@@ -451,8 +452,9 @@ section {
   .logo {
     display: flex;
     font-size: 12px;
-    /* width: 200px; */
+
     margin: 0;
+    margin-right: 3px;
   }
 
   .logo a {
@@ -466,6 +468,7 @@ section {
   }
 
   .toggleMenu {
+    left: 20px;
     display: block;
     transition: transform 0.1s;
   }
@@ -497,7 +500,7 @@ section {
   .intro_picture img {
     width: 200px;
     height: 200px;
-    margin: 60px 0px 0px 0px;
+    margin: 20px 0px 0px 0px;
     padding: 0;
   }
 
@@ -541,7 +544,7 @@ section {
   }
 
   .menu-icons {
-    bottom: -155px;
+    top: 50px;
   }
 }
 
