--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ section {
   height: 30px;
   width: 70px;
   top: 30px;
-  right: 25px;
+  right: 33px;
   background-color: #333;
   transition: background 0.3s;
 }
@@ -183,6 +183,26 @@ section {
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease-in-out;
+}
+
+@keyframes titleAnimation {
+  0% {
+    border-radius: 60% 40% 30% 70%/ 60% 30% 70% 40%;
+  }
+
+  50% {
+    border-radius: 30% 60% 70% 40% /50% 60% 30% 60%;
+  }
+
+  100% {
+    border-radius: 60% 40% 30% 70%/ 60% 30% 70% 40%;
+  }
+}
+
+.intro_picture img:hover {
+  transform: scale(1.03);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8);
 }
 
 .intro_info {
@@ -566,6 +586,10 @@ section {
   }
 }
 
+.about-title .titleMain {
+  margin-left: -60px;
+}
+
 .about-title.dark .titleMain {
   color: #fff;
 }
@@ -592,12 +616,17 @@ section {
   align-items: center;
   justify-content: center;
   gap: 40px;
+  margin-top: -1px;
 }
 
 .about-info img {
   width: 400px;
+  /* background: #333; */
   height: 400px;
   border-radius: 30px;
+  margin-top: -25px;
+  animation: titleAnimation 5s infinite;
+  transition: all 0.3s;
 }
 
 .about-text {
@@ -655,6 +684,14 @@ section {
 
 .about-info.dark p {
   color: #fff;
+}
+
+.about-info img {
+  background-color: #222;
+}
+
+.about-info.dark img {
+  background-color: #fff;
 }
 .arrow i {
   position: absolute;
@@ -801,7 +838,7 @@ section {
 }
 
 #projects {
-  height: 230vh;
+  height: 205vh;
   display: flex;
   align-items: center;
   /* justify-content: center; */
@@ -812,7 +849,7 @@ section {
 
 #projects .arrow i {
   left: -90px;
-  bottom: 560px;
+  bottom: 385px;
 }
 
 #projects h1 {
@@ -823,7 +860,6 @@ section {
   display: grid;
   grid-template-columns: 600px auto;
   gap: 30px;
-  /* margin-top: 90px; */
   align-items: center;
   justify-content: center;
 }
@@ -838,10 +874,6 @@ section {
   position: relative;
 }
 
-/* .flex {
-  display: flex;
-} */
-
 .projects::after {
   content: "";
   display: block;
@@ -855,72 +887,72 @@ section {
 
 .projects-container p {
   font-size: 15px;
-  font-weight: 400;
+  font-weight: 500;
   color: #111;
-  margin-bottom: 32px;
+  margin-bottom: 36px;
 }
 
 .projects h2 {
-  /* text-align: center; */
   margin-bottom: 20px;
+  font-weight: 700;
+  color: #111;
 }
 
 .projects-list {
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  /* text-align: center; */
+  gap: 0px;
+  text-align: center;
+  justify-content: start;
+  /* align-items: center; */
 }
 
 .projects-list > span {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 17px;
+  margin-bottom: 16px;
+  color: #444;
+}
+
+.projects-list .dev-links {
+  gap: 80px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: -20px;
+  padding: 0;
+}
+
+.projects-list .dev-links a {
+  padding: 10px 20px;
+  margin: 0;
+  width: 130px;
 }
 
 .flex-list {
   display: flex;
-  gap: 50px;
+  /* gap: 20px; */
   align-items: center;
-  margin-bottom: 32px;
+  margin-bottom: 26px;
   margin-top: 20px;
-  text-align: center;
-  /* justify-content: center; */
+  text-align: start;
+  justify-content: space-around;
 }
 .flex-list-inside {
   display: flex;
+  /* flex-direction: column; */
   gap: 8px;
   align-items: center;
-  font-size: 15px;
+  font-size: 16px;
+  color: #444;
 }
 
 .projects-text p {
   font-size: 15px;
 }
 
-.projectsLinks {
-  display: flex;
-  gap: 50px;
-  margin-top: 20px;
-  align-items: center;
-  justify-content: center;
-}
-
-.projectsLinks a {
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-  border-radius: 40px;
-  width: 210px;
-  text-align: center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-  transition: 0.3s;
-}
-.projectsLinks a:hover {
-  background: #666;
-}
-
 #contact {
-  height: 65vh;
+  height: 80vh;
   display: flex;
   align-items: center;
   /* justify-content: center; */
@@ -939,39 +971,28 @@ section {
   right: 0;
 }
 
-.footer {
-  width: 100%;
-  background-color: #333;
-  height: 150px;
+.contact-container {
+  display: grid;
+  grid-template-columns: 3fr 7fr;
+  margin-top: 120px;
+  gap: 120px;
+}
+.contact-container h2 {
+  margin-bottom: 40px;
+  color: #666;
+}
+
+.contact-socials .dev-socials {
+  margin-top: 50px;
   display: flex;
-  position: relative;
-  justify-content: center;
-  transition: 0.3s;
-  z-index: 1;
+  gap: 50px;
+  flex-direction: column;
+}
+.contact-socials .dev-socials i {
+  font-size: 50px;
 }
 
-.footer .assinaturaEscura {
-  display: none;
-}
-
-.footer.dark {
-  background: #fff;
-  transition: 0.3s;
-}
-
-.footer.dark .assinaturaBranca {
-  display: none;
-}
-.footer.dark .assinaturaEscura {
-  display: block;
-}
-
-.footer img {
-  width: 200px;
-
-  height: 64px;
-  position: absolute;
-  bottom: 45px;
-  left: 0;
-  z-index: 0;
+.form-inside {
+  display: flex;
+  flex-direction: column;
 }
