--- a/css/header.css
+++ b/css/header.css
@@ -36,6 +36,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 20px 25px;
   align-items: center;
+  z-index: 1;
 }
 
 .nav-menu.dark {
@@ -50,6 +51,7 @@
   border-radius: 40px;
   position: relative;
   font-weight: 500;
+  z-index: 1;
 }
 
 .nav-menu.dark .itens-menu {
