--- a/css/skills.css
+++ b/css/skills.css
@@ -1,9 +1,10 @@
 #skills {
+  margin-top: -60px;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 10rem 8rem;
   position: relative;
 }
 
