--- a/css/profile.css
+++ b/css/profile.css
@@ -11,6 +11,7 @@
   align-items: center;
   gap: 3rem;
   position: relative;
+  z-index: 0;
 }
 
 .intro_picture img {
@@ -130,6 +131,40 @@
   color: #777;
 }
 
-.menu-icons {
-  display: none;
+@media (max-width: 600px) {
+  #profile .arrow i {
+    left: 128px;
+    bottom: -100px;
+    font-size: 35px;
+  }
+
+  #profile {
+    height: max-content;
+    flex-direction: column;
+    margin: 4rem 0px 0px 0px;
+    justify-content: start;
+  }
+
+  .intro_picture img {
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .intro_info .last_p {
+    font-size: 1.2rem;
+  }
+
+  .dev-links {
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+  }
+
+  .dev-links a {
+    padding: 10px 20px;
+  }
 }
