--- a/css/globals.css
+++ b/css/globals.css
@@ -103,18 +103,7 @@ form {
 }
 
 button {
-  background-color: #333;
-  /* outline: 1px solid #f1f1f1; */
-  transition: all 0.3s ease;
-  color: #fff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-  border: none;
-  padding: 15px 30px;
-  border-radius: 30px;
-  cursor: pointer;
-  font-size: 18px;
-  font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  transition: 0.3s;
 }
 
 button:hover {
