--- a/css/projects.css
+++ b/css/projects.css
@@ -19,15 +19,32 @@
 
 .projects-container {
   display: grid;
-  grid-template-columns: 600px auto;
+  grid-template-columns: 530px auto;
   gap: 30px;
   align-items: center;
   justify-content: center;
 }
 
 .projects-img img {
-  margin-top: 150px;
-  width: 600px;
+  filter: blur(5px);
+  margin-top: 190px;
+  /* width: 1500px; */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.projects-img img:hover {
+  filter: blur(3px);
+}
+
+.projects-img i {
+  position: absolute;
+  bottom: 150px;
+  left: 280px;
+  font-size: 40px;
+  cursor: pointer;
+  color: #666;
 }
 
 .projects {
