mudanças nas habilidades da section skills

--- a/css/contact.css
+++ b/css/contact.css
@@ -110,6 +110,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+.button.dark .btn {
+  background-color: #fff;
+  color: #333;
+  outline: #222;
+}
 .copy {
   align-self: center;
   position: relative;
